# nip

./: LICENSE  README.md  setup.cfg
_invalid_tests/: test.py  test_read_write.py  test_wrong.py
doc/: README.md  config.nip  features.md
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  nip.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  nip.html  objects.inv  py-modindex.html  search.html  searchindex.js
nip/: __init__.py  constructor.py  convertor.py  directives.py  dumper.py  elements.py  iter_parser.py  main.py  multiprocess.py  non_seq_constructor.py  parser.py  stream.py  tokens.py  utils.py
tests/: builders.py  fstrings.py  test.py  test_args.py  test_call_wrapper.py  test_decorator.py  test_document.py  test_inline.py  test_iters.py  test_named.py  test_nothing.py  test_run.py  test_strict.py  test_tag.py  test_tokenizer.py  test_utils.py  test_wrong.py
tests/_invalid_tests/: test.py  test_wrong.py
tests/base_tests/: test.py  test_args.py  test_document.py  test_read_write.py  test_wrong.py
tests/base_tests/comments/: builders.py  test_comments.py
tests/base_tests/document/: test_document.py
tests/base_tests/numbers/: test_numbers.py
tests/base_tests/raises/: test_wrong_dicts.py
tests/base_tests/strings/: test_strings.py
tests/base_tests/tags/: builders.py  test_tag.py
tests/complex/: test_complex_example.py
tests/config_dumps/: ababra.yaml  avocado.yaml  cadabra.yaml
tests/configs/: args_config.yaml  auto_wrap_config.yaml  call_wrapper_config.yaml  config.nip  config.yaml  document.nip  fstrings.nip  inline_config.nip  iter_config.yaml  named_iter.nip  numpy.nip  run.nip  run_config.yaml  run_config_param.nip  simple_tag_config.yaml  strict_config.nip  wrong.nip
tests/test_iters/: test_iters.py  test_named.py
tests/test_small_features/: fstrings.py  test_inline.py  test_module.py  test_strict.py
tests/utils/: builders.py  test_utils.py
(+65 files in other folders)
