[metadata]
name = nip-spairet
version = 0.1.1
author = Ilya Vasiliev
author_email = spairet@bk.ru
description = Nice Iterable Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spairet/nip
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src