[metadata]
name = nip-config
version = 0.1.2
author = Ilya Vasiliev
author_email = spairet@bk.ru
description = Nice Iterable Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spairet/nip
project_urls =
    Issues = https://github.com/spairet/nip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    multipledispatch