[metadata]
name = nip-config
version = 0.2.4
author = Ilya Vasiliev
author_email = spairet@bk.ru
description = Nice Iterable Parser
long_description =
    NIP is a yaml-like config files parser for convenient python object construction and experiment holding.
    Short guide can be found here: https://github.com/spairet/nip/tree/main/doc
long_description_content_type = text/markdown
url = https://github.com/spairet/nip
project_urls =
    Guide = https://github.com/spairet/nip/tree/main/doc
    Issues = https://github.com/spairet/nip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    multipledispatch
